--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
     <!-- <img src="C.png" alt="image not found"> -->
     <a href="https:www.google.com">Google</a>
     <!-- <p href="https:www.google.com">GO Google</p href> -->
-    <a href="./index.html">GO</a>
+    <a href="./index1.html">GO</a>
     <a href="mailto:random@gmail.com">mail:random</a>
     <a href="tel:9347580802">call on this no</a>
+    <script src="index1.js"></script>
 </body>
 </html>
